bootstrap/minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    app.kubernetes.io/part-of: shared-infra
    app.kubernetes.io/name: minio
